# rpaquintoandar

./: .gitignore  pyproject.toml
config/: settings.yaml
docs/: architecture.md
docs/adr/: 0001-clean-architecture.md  0002-playwright-over-requests.md  0003-coordinates-api-for-bulk-ids.md  0004-sqlite-async-persistence.md  0005-pipeline-step-pattern.md
scripts/: run.sh  setup.sh  test.sh
src/rpaquintoandar/: __main__.py
src/rpaquintoandar/application/dtos/: __init__.py  extract_result.py  search_result.py
src/rpaquintoandar/application/pipeline/: __init__.py  pipeline_context.py  pipeline_runner.py  step_options.py  step_protocol.py
src/rpaquintoandar/application/steps/: __init__.py  export_step.py  extract_step.py  search_step.py
src/rpaquintoandar/application/use_cases/: __init__.py  extract_detail.py  search_listings.py  segmented_search.py
src/rpaquintoandar/domain/entities/: __init__.py  execution_run.py  listing.py  step_record.py
src/rpaquintoandar/domain/enums/: __init__.py  error_category.py  furnished_status.py  processing_status.py  (+2 more)
src/rpaquintoandar/shared/: di_container.py  hashing.py  logging_config.py
src/rpaquintoandar/works/: __init__.py  full_crawl_work.py  resume_work.py  single_listing_test_work.py  single_page_test_work.py
tests/: conftest.py
tests/integration/: test_migrations.py  test_sqlite_repos.py
tests/unit/application/: test_pipeline_runner.py  test_search_listings.py
tests/unit/domain/: test_address.py  test_content_hash.py  test_listing.py
tests/unit/infrastructure/: test_hashing.py  test_response_parser.py
(+30 files in other folders)
